Qatar changes done

--- a/UI/index.html
+++ b/UI/index.html
@@ -34,7 +34,7 @@
 			botOptions.assertionFn = assertion;
 			botOptions.isLoggedIn = false; // false: triggers anonymus flow. set it to true for log-in flow.
 			botOptions.clientId   = "cs-618110e2-856e-502a-9fa5-6b0b9bbf920f";
-			botOptions.botInfo = {name:"Bharti AXA Life Insurance","_id":"st-ff1e586b-2a95-5f28-a377-7150a6dc2b9a"}; // pass bot name and stream id
+			botOptions.botInfo = {name:"Qatar Airways","_id":"st-8088a92c-2bcd-527a-b52e-1791148f983f"}; // pass bot name and stream id
 			
 			var chatConfig={
 				botOptions:botOptions
@@ -63,7 +63,7 @@
 		</style>
 	</head>
 	<body>
-	    <img src="/client/bharti-axagi-new.png" alt="No Image" style="width: 100%;height: 100%; background-image:norepeat">
+	    <img src="/client/qatarairways.png" alt="No Image" style="width: 100%;height: 100%; background-image:norepeat">
 		<div id="chatContainer">
 		<button class="openChatWindow">Open Chat Window</button>
 		</div>
